# peasytext

./: .gitignore  README.md  demo.tape  pyproject.toml
src/peasytext/: __init__.py  api.py  cli.py  engine.py  mcp_server.py
tests/: test_engine.py
